fix(place): corrige letter-spacing 0%

--- a/blocks/place.css
+++ b/blocks/place.css
@@ -46,7 +46,6 @@
   display: block;
   font-size: 18px;
   line-height: 22px;
-  letter-spacing: 0%;
 }
 
 .place__paragraph {
@@ -60,7 +59,6 @@
   margin: 0 0 25px;
   font-weight: 400;
   font-size: 18px;
-  letter-spacing: 0%;
   line-height: 163%;
 }
 
@@ -72,7 +70,6 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 100%;
-  letter-spacing: 0%;
   border-radius: 4px;
   background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
   transition: opacity 0.3s ease;
